# dbt-cloud-migration-tool

./: README.md  pyproject.toml
.claude/: settings.local.json
src/dbt_cloud_migrate/: cli.py  mcp_server.py  models.py  reporter.py
src/dbt_cloud_migrate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/dbt_cloud_migrate/checks/: __init__.py  deprecations.py  profiles.py  structure.py
